--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-    "name": "flexage.plinksoundeffectspack",
-    "displayName": "Plink Sound Effects Pack",
-    "version": "1.0.1",
-    "description": "Some plinky and clicky UI sounds for Emby Theater",
+    "name": "flexage.kodisoundeffectspack",
+    "displayName": "Kodi Sound Effects Pack",
+    "version": "1.0.0",
+    "description": "Kodi UI sounds for Emby Theater",
     "plugin": "plugin.js",
-    "bugs": "https://github.com/flexage/emby.web.plugins.soundeffects.plink/issues",
-    "homepage": "https://github.com/flexage/emby.web.plugins.soundeffects.plink",
-    "thumb": "plink.jpg",
-    "backdrop": "plink.jpg"
+    "bugs": "https://github.com/flexage/emby.web.plugins.soundeffects.kodi/issues",
+    "homepage": "https://github.com/flexage/emby.web.plugins.soundeffects.kodi",
+    "thumb": "",
+    "backdrop": ""
 }
